examples/test/testpolicy13012.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13012
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key15: value46
      key29: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value6
          key13: value4
          key32: value21
      podSelector:
        matchLabels:
          key35: value33
          key25: value44
